--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,10 +4,10 @@ jobs:
   list-modified-lines:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - name: Checkout
+      uses: actions/checkout@master
     - name: Get modified files and lines
       id: modified-lines
       uses: ./
     - name: Get the output
       run: echo "${{ steps.modified-lines.outputs.modified_lines }}"
-
